# relational-algebra

./: README.md  default.nix  flake.nix  relational-algebra.cabal
src/Relational/: Class.hs  MetaCircular.hs  Sqlite.hs
src/Relational/Sqlite/: Internal.hs
